crates/spicy_parser/src/snapshots/spicy_parser__instance_parser__tests__parser-stop_at_end.snap
---
source: crates/spicy_parser/src/instance_parser.rs
expression: deck
---
Deck {
    title: "stop after end",
    node_mapping: NodeMapping {
        node_mapping: {
            NodeName(
                "0",
            ): NodeIndex(
                0,
            ),
            NodeName(
                "in",
            ): NodeIndex(
                1,
            ),
            NodeName(
                "out",
            ): NodeIndex(
                2,
            ),
        },
        node_counter: 3,
    },
    commands: [
        Op(
            OpCommand {
                span: Span {
                    start: 28,
                    end: 30,
                    source_index: SourceFileId(
                        0,
                    ),
                },
            },
        ),
    ],
    devices: Devices {
        resistors: [
            ResistorSpec {
                name: "R1",
                span: Span {
                    start: 15,
                    end: 26,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                    },
                ),
                model: None,
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        voltage_sources: [],
        current_sources: [],
        bjts: [],
    },
}
