crates/spicy_parser/src/snapshots/spicy_parser__instance_parser__tests__parser-subcircuit_basic.snap
---
source: crates/spicy_parser/src/instance_parser.rs
expression: deck
---
Deck {
    title: "basic subcircuit",
    node_mapping: NodeMapping {
        node_mapping: {
            NodeName(
                "0",
            ): NodeIndex(
                0,
            ),
            NodeName(
                "vcc",
            ): NodeIndex(
                1,
            ),
            NodeName(
                "in",
            ): NodeIndex(
                2,
            ),
            NodeName(
                "out",
            ): NodeIndex(
                3,
            ),
        },
        node_counter: 4,
        branch_mapping: {
            "X1.V1": CurrentBranchIndex(
                1,
            ),
        },
        branch_counter: 2,
    },
    commands: [],
    devices: Devices {
        resistors: [
            ResistorSpec {
                name: "X1.R1",
                span: Span {
                    start: 57,
                    end: 68,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    2,
                ),
                negative: NodeIndex(
                    3,
                ),
                resistance: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                    },
                ),
                model: None,
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ],
        capacitors: [
            CapacitorSpec {
                name: "X1.C2",
                span: Span {
                    start: 70,
                    end: 84,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    3,
                ),
                negative: NodeIndex(
                    0,
                ),
                capacitance: Some(
                    Value {
                        value: 0.1,
                        exponent: None,
                        suffix: Some(
                            Micro,
                        ),
                    },
                ),
                model: None,
                mname: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                ic: None,
            },
        ],
        inductors: [],
        diodes: [],
        voltage_sources: [
            IndependentSourceSpec {
                name: "X1.V1",
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    0,
                ),
                current_branch: CurrentBranchIndex(
                    1,
                ),
                dc: Some(
                    Constant(
                        Value {
                            value: 5.0,
                            exponent: None,
                            suffix: None,
                        },
                    ),
                ),
                ac: None,
            },
        ],
        current_sources: [],
        bjts: [],
    },
}
