crates/spicy_parser/src/snapshots/spicy_parser__instance_parser__tests__parser-with_params_and_subckts.snap
---
source: crates/spicy_parser/src/instance_parser.rs
assertion_line: 1267
expression: deck
---
Deck {
    title: "title with params, expressions, and subcircuits",
    node_mapping: NodeMapping {
        nodes: [
            NodeName(
                "0",
            ),
            NodeName(
                "in",
            ),
            NodeName(
                "out",
            ),
        ],
    },
    commands: [
        Op(
            OpCommand {
                span: Span {
                    start: 241,
                    end: 243,
                    source_index: SourceFileId(
                        0,
                    ),
                },
            },
        ),
    ],
    devices: Devices {
        resistors: [
            ResistorSpec {
                name: "Rtop",
                span: Span {
                    start: 194,
                    end: 218,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 2000.0,
                        exponent: None,
                        suffix: None,
                        scaled: 2000.0,
                    },
                ),
                model: None,
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
            ResistorSpec {
                name: "X1.R1",
                span: Span {
                    start: 118,
                    end: 139,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 27000.0,
                        exponent: None,
                        suffix: None,
                        scaled: 27000.0,
                    },
                ),
                model: None,
                ac: None,
                m: None,
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        voltage_sources: [],
        current_sources: [],
        bjts: [],
    },
}
